refactor LogReaderTest.java